# retinopathy-grading

./: .gitignore  LICENSE  MODEL_CARD.md  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
artifacts/: data_report.json  idrid_baseline_metrics.json  idrid_finetune_training.json  idrid_high_confidence_errors.csv  idrid_metrics.json  metrics.json  ordinal_high_confidence_errors.csv  ordinal_metrics.json
artifacts/deepdrid/: deepdrid_high_confidence_errors.csv  deepdrid_metrics.json  integrity_report.json
artifacts/idrid_finetune/: baseline_aptos_high_confidence_errors.csv  baseline_aptos_metrics.json  baseline_idrid_high_confidence_errors.csv  baseline_idrid_metrics.json  candidate_aptos_metrics.json  candidate_idrid_high_confidence_errors.csv  comparison.json
configs/: baseline.yaml  idrid_finetune.yaml  ordinal_384.yaml
data/splits/: aptos.csv  aptos_highres.csv
notebooks/: kaggle_training.ipynb
scripts/: compare_checkpoints.py  download_data.py  evaluate_deepdrid.py  evaluate_idrid.py  finetune_idrid.py  match_high_resolution.py  prepare_data.py  prepare_deepdrid.py  prepare_idrid.py  train_model.py  train_ordinal_model.py
src/retinopathy/: __init__.py  analysis.py  calibration.py  data.py  deepdrid.py  evaluation.py  explain.py  (+11 more)
tests/: test_analysis.py  test_app.py  test_clustered_analysis.py  test_data.py  test_deepdrid.py  test_evaluation.py  test_explain.py  test_finetune.py  test_idrid.py  test_matching.py  test_model.py  test_ordinal.py  test_promotion.py  test_quality.py  test_training.py
